Framework: Fixes clipping of focus styles on section header buttons

--- a/client/components/section-header/style.scss
+++ b/client/components/section-header/style.scss
@@ -43,6 +43,10 @@
 	float: left;
 	margin-right: 8px;
 
+	&:first-child {
+		margin-left: 2px;
+	}
+
 	&:last-child {
 		margin-right: 0;
 	}
